# x402

./: Cargo.toml  Dockerfile  LICENSE  README.md  config.docker.json  config.example.json  config.test.json  justfile
.cargo/: config.toml
crates/awesome402-axum/: Cargo.toml  README.md
crates/awesome402-axum/src/: facilitator_client.rs  layer.rs  lib.rs  price.rs
crates/awesome402-reqwest/: Cargo.toml
crates/awesome402-reqwest/src/: builder.rs  client.rs  http_transport.rs
crates/x402-axum/: Cargo.toml  README.md
crates/x402-axum/src/: facilitator_client.rs  layer.rs  lib.rs  price.rs
crates/x402-reqwest/: Cargo.toml  README.md
crates/x402-reqwest/src/: client.rs  http_transport.rs
docs/: how-to-write-a-scheme.md
examples/awesome402-axum-example/: Cargo.toml  README.md
examples/awesome402-axum-example/src/: main.rs
examples/awesome402-reqwest-example/: README.md
examples/awesome402-reqwest-example/src/: main.rs
examples/x402-axum-example/: Cargo.toml  README.md
examples/x402-axum-example/src/: main.rs
examples/x402-reqwest-example/: Cargo.toml  README.md
src/: config.rs  facilitator_local.rs  handlers.rs  lib.rs  main.rs  networks.rs
src/proto/: mod.rs  v1.rs  v2.rs
src/scheme/v1_eip155_exact/: client.rs
