[package]
name = "x402-axum"
version = "0.6.3"
edition = "2024"
description = "Axum middleware for enforcing x402 protocol payments on protected routes"
license = "MIT"
repository = "https://github.com/x402/x402"
keywords = ["axum", "middleware", "x402", "payments", "stablecoin"]
categories = ["web-programming::http-server", "authentication", "cryptography", "finance", "network-programming"]
readme = "README.md"

[dependencies]
x402 = { path = "../..", default-features = false }
url = { version = "2.5.4", features = ["serde"] }
serde_json = { version = "1.0.140" }
reqwest = { version = "0.12.15" }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = { version = "2.0.12" }
tower = { version = "0.5.2" }
http = { version = "1.3.1" }
once_cell = { version = "1.21.3" }
axum-core = { version = "0.5.2" }

# Telemetry
tracing = { version = "0.1.41", optional = true }

[dev-dependencies]
axum = { version = "0.8.4" }

[features]
default = []
telemetry = ["dep:tracing", "x402/telemetry"]
